--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "react-select": "^2.4.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,5 +25,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
+  ]
 }
